--- a/Legal-Notice.html
+++ b/Legal-Notice.html
@@ -83,7 +83,7 @@
 											</header>
 											<p>Except for explicitly licensed elements, all information on this web site is protected by the copyrights held by Alptra.
 											Therefore, the information may not be reproduced, modified, republished, re-aired, translated, distributed or reused in any manner, without the written consent of Alptra.
-											Alptra’s title, concept and form, as well as its content, contained on the Alptra site are the property of Alptra.</p>
+											Alptra’s title, concept and form, as well as its content, contained on the Alptra site are the property of Alptra. The photos are covered by the Unsplash license.</p>
 										</article>
 									
 						</div>
