--- a/Legal-Notice.html
+++ b/Legal-Notice.html
@@ -69,8 +69,8 @@
 											<br>267 rue de la Piat
 											<br>73260 Grand-Aigueblanche</p>
 											<h3></h3>
-											<p>SIRET NUMBER
-											<br>VAT NUMBER
+											<p>SIRET Number: 75179823200029
+											<br>VAT Number: 
 											<br>SOLE PROPRIETORSHIP - ENTREPRISE INDIVIDUELLE</p>
 											<header>
 												<h2><FONT COLOR="#1d1d1f">Hosting provider</FONT></h2>
