--- a/Legal-Notice.html
+++ b/Legal-Notice.html
@@ -63,7 +63,7 @@
 									<!-- Post -->
 										<article class="box post">
 											<header>
-												<h2><FONT COLOR="#1d1d1f">COMPANY</FONT></h2>
+												<h2><FONT COLOR="#1d1d1f">Editor</FONT></h2>
 											</header>
 											<p>M. Tony FOUCART
 											<br>267 rue de la Piat
