--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE HTML>
+<!--
+	Strongly Typed by HTML5 UP. Changes were made.
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 	<head>
 		<SCRIPT LANGUAGE="JavaScript"> 
