--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -1,4 +1,10 @@
 <!DOCTYPE HTML>
+<!--
+	Strongly Typed by HTML5 UP.
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	CHANGES WERE MADE.
+-->
 <html>
 	<head>
 		<SCRIPT LANGUAGE="JavaScript"> 
