--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	Strongly Typed by HTML5 UP. Changes were made.
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	CHANGES WERE MADE.
 -->
 <html>
 	<head>
