--- a/Legal-Notice.html
+++ b/Legal-Notice.html
@@ -53,6 +53,15 @@
 					</div>
 				</section>
 
+			<!-- Features -->
+				<section id="features">
+					<div class="container">
+						<header>
+							<h2><strong><font color="#1d1d1f">Legal Notice</font></strong></h2>
+						</header>
+					</div>
+				</section>
+			
 			<!-- Main -->
 				<section id="main">
 					<div class="container">
