--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					<div class="container">
 						<div class="js-show-on-scroll">
 						<header>
-							<h2><strong><font color="0066CC">Translation Services</font></strong></h2>
+							<h2><strong><font color="#0066CC">Translation Services</font></strong></h2>
 						</header>
 						</div>
 						<div class="row aln-center">
