--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <!--
-	Strongly Typed by HTML5 UP.
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-	CHANGES WERE MADE.
+	Alptra website
+
+	Template Strongly Typed by HTML5 UP, free for personal and commercial use under the CCA 3.0 license (html5up.net/license). Html5up.net | @ajlkn | aj@lkn.io | AJ.
+	Changes were made.
 -->
 <html>
 	<head>
