--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!--
 	Alptra website
 
-	Template Strongly Typed by HTML5 UP, free for personal and commercial use under the CCA 3.0 license (html5up.net/license). Html5up.net | @ajlkn | aj@lkn.io | AJ.
+	Html5up.net | Template Strongly Typed by HTML5 UP, free for personal and commercial use under the CCA 3.0 license (html5up.net/license). @ajlkn | aj@lkn.io | AJ.
 	Changes were made.
 -->
 <html>
