--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
 									<li><a class="icon solid fa-coffee" href="right-sidebar.html"><span>Cafe</span></a></li>
 								</ul>
 							</nav>
+							<nav id="main-menu">
+     								<ul class="nav-bar">
+          								<li class="nav-button-home"><a href="#">CAFE</a></li>
+          								<li class="nav-button-services"><a href="#"></a></li>
+     								</ul>
+							</nav>
 
 					</div>
 				</section>
