--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
 										<div class="col-6 col-12-small">
 											<ul class="icons">
 												<li class="icon solid fa-home">
-													267 Rue de la Piat<br />
-													73260 Grand-Aigueblanche<br />
-													France
+													<br>267 Rue de la Piat<br />
+													<br>73260 Grand-Aigueblanche<br />
+													<br>France
 												</li>
 											</ul>
 										</div>
