--- a/Legal-Notice.html
+++ b/Legal-Notice.html
@@ -76,7 +76,8 @@
 											</header>
 											<p>M. Tony FOUCART
 											<br>267 rue de la Piat
-											<br>73260 Grand-Aigueblanche</p>
+											<br>73260 Grand-Aigueblanche
+											<br>France</p>
 											<h3></h3>
 											<p>SIRET Number: 75179823200029
 											<br>SOLE PROPRIETORSHIP - ENTREPRISE INDIVIDUELLE</p>
