--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
+				<!-- Nav -->
+					<nav id="main-menu">
+     						<ul class="nav-bar">
+          						<li class="nav-button-home"><a href="https://alptra.github.io/right-sidebar.html">CAFE</a></li>
+							<li class="nav-button-services"><a href="#">Services</a></li>
+     						</ul>
+					</nav>				
 				<section id="header">
-					<div class="container">
-						<!-- Nav -->
-							<nav id="main-menu">
-     								<ul class="nav-bar">
-          								<li class="nav-button-home"><a href="https://alptra.github.io/right-sidebar.html">CAFE</a></li>
-     								</ul>
-							</nav>
-						
+					<div class="container">						
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">Alptra</a></h1>
 							<p class="ml6">
