--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
     <div class="collapse navbar-collapse" id="navbar-primary-collapse">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
+        <li><a href="#">Cafe</a></li>
         <li><a href="#">Link</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
