--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 							</p>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-							
+						
+						<!-- Nav -->
 						<nav id="navbar-primary" class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
