--- a/index.html
+++ b/index.html
@@ -51,8 +51,13 @@
 						
 						<!-- Nav -->
 							<nav id="nav">
-								<ul>
-									<li><a class="icon solid fa-home" href="index.html"><span>Home</span></a></li>
+								<ul role="navigation" class="nav">
+  									<li><a title="Home" href="http://turkpixel.com/">Hello</a></li>
+  									<li><a title="About" href="about/">About</a></li>  
+  									<li><a title="Features" href="features/">Features</a></li>
+  									<li><a title="Portfolio" href="portfolio/">Portfolio</a></li>  
+  									<li><a title="Blog" href="blog/">Blog</a></li>
+  									<li><a title="Contact" href="contact/">Contact</a></li>  
 								</ul>
 							</nav>
 						
