--- a/index.html
+++ b/index.html
@@ -53,11 +53,7 @@
 							<nav id="nav">
 								<ul role="navigation" class="nav">
   									<li><a title="Home" href="http://turkpixel.com/">Hello</a></li>
-  									<li><a title="About" href="about/">About</a></li>  
-  									<li><a title="Features" href="features/">Features</a></li>
-  									<li><a title="Portfolio" href="portfolio/">Portfolio</a></li>  
-  									<li><a title="Blog" href="blog/">Blog</a></li>
-  									<li><a title="Contact" href="contact/">Contact</a></li>  
+  									<li><a title="About" href="https://alptra.github.io/right-sidebar.html">Cafe</a></li>  
 								</ul>
 							</nav>
 						
