--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 							<nav id="nav">
 								<ul role="navigation" class="nav">
   									<li><a title="Home" href="http://turkpixel.com/">Hello</a></li>
-  									<li><a title="About" href="https://alptra.github.io/right-sidebar.html">Cafe</a></li>  
+  									<li><a title="About" href="https://alptra.github.io/right-sidebar.html">Cafe</a></li>
+  									<li><a title="Features" href="features/">Features</a></li> 
 								</ul>
 							</nav>
 						
