--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -51,8 +51,8 @@
 									
 						<!-- Nav -->
 							<nav id="nav">
-								<ul>
-									<li><a class="icon solid fa-home" href="index.html"><span>Home</span></a></li>
+								<ul role="navigation" class="nav">
+  									<li><a title="About" href="https://alptra.github.io/right-sidebar.html">Cafe</a></li>
 								</ul>
 							</nav>
 
