--- a/Legal-Notice.html
+++ b/Legal-Notice.html
@@ -46,7 +46,7 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a class="icon solid fa-home" href="index.html"><span>Home</span></a></li>
+									<li><a class="icon solid fa-home" href="https://alptra.github.io/index.html"><span>Home</span></a></li>
 								</ul>
 							</nav>
 
