--- a/Legal-Notice.html
+++ b/Legal-Notice.html
@@ -45,10 +45,11 @@
 
 						<!-- Nav -->
 							<nav id="nav">
-								<ul>
-									<li><a class="icon solid fa-home" href="https://alptra.github.io/index.html"><span>Home</span></a></li>
+								<ul role="navigation" class="nav">
+  									<li><a title="About" href="https://alptra.github.io/index.html">Home</a></li>
 								</ul>
 							</nav>
+
 
 					</div>
 				</section>
