--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 							<nav id="nav">
 								<ul role="navigation" class="nav">
   									<li><a title="About" href="https://alptra.github.io/right-sidebar.html">Cafe</a></li>
+									<li><a title="About" href="about/">About</a></li>  
+  									<li><a title="Features" href="features/">Features</a></li>
+  									<li><a title="Portfolio" href="portfolio/">Portfolio</a></li>
 								</ul>
 							</nav>
 						
