--- a/index.html
+++ b/index.html
@@ -52,10 +52,8 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul role="navigation" class="nav">
-  									<li><a title="About" href="https://alptra.github.io/right-sidebar.html">Cafe</a></li>
-									<li><a title="About" href="about/">About</a></li>  
-  									<li><a title="Features" href="features/">Features</a></li>
-  									<li><a title="Portfolio" href="portfolio/">Portfolio</a></li>
+  									<li><a title="Cafe" href="https://alptra.github.io/right-sidebar.html">Cafe</a></li>
+									<li><a title="Home" href="https://alptra.github.io/index.html">Home</a></li>
 								</ul>
 							</nav>
 						
