--- a/Legal-Notice.html
+++ b/Legal-Notice.html
@@ -46,7 +46,8 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul role="navigation" class="nav">
-  									<li><a title="About" href="https://alptra.github.io/index.html">Home</a></li>
+  									<li><a title="Cafe" href="https://alptra.github.io/right-sidebar.html">Cafe</a></li>
+									<li><a title="Home" href="https://alptra.github.io/index.html">Home</a></li>
 								</ul>
 							</nav>
 
