--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 							<nav id="nav">
 								<ul role="navigation" class="nav">
   									<li><a title="Home" href="https://alptra.github.io/index.html">Home</a></li>
-									<li><a title="Portfolio" href="">Portfolio</a></li>
+									<li><a title="Portfolio" href="portfolio/">Portfolio</a></li> 
+									 <li><a title="Features" href="features/">Features</a></li>
 									<li><a title="Cafe" href="https://alptra.github.io/right-sidebar.html">Cafe</a></li>
 								</ul>
 							</nav>
