--- a/Legal-Notice.html
+++ b/Legal-Notice.html
@@ -47,8 +47,10 @@
 							<nav id="nav">
 								<ul role="navigation" class="nav">
 									<li><a title="Home" href="https://alptra.github.io/index.html">Home</a></li>
-									<li><a title="Portfolio" href="">Portfolio</a></li>
+									<li><a title="Portfolio" href="portfolio/">Portfolio</a></li> 
+									<li><a title="Features" href="features/">Features</a></li>
 									<li><a title="Cafe" href="https://alptra.github.io/right-sidebar.html">Cafe</a></li>
+									<li><a title="Contact" href="">Contact</a></li>
 								</ul>
 							</nav>
 
