--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -54,7 +54,7 @@
 								<ul role="navigation" class="nav">
   									<li><a title="Home" href="https://alptra.github.io/index.html">Home</a></li>
 									<li><a title="Portfolio" href="">Portfolio</a></li> 
-									<li><a title="Disclaimer" href="">Disclaimer</a></li>
+									<li><a title="Disclaimer" href="https://alptra.github.io/Legal-Notice.html">Disclaimer</a></li>
 									<li><a title="Cafe" href="https://alptra.github.io/right-sidebar.html">Cafe</a></li>
 								</ul>
 							</nav>
@@ -176,7 +176,7 @@
 					</div>
 					<div id="copyright" class="container">
 						<ul class="links">
-							<li>&copy; Alptra. All rights reserved.<a href="Legal-Notice.html"> Legal Notice</a></li>
+							<li>&copy; Alptra. All rights reserved.<a href="https://alptra.github.io/Legal-Notice.html"> Legal Notice</a></li>
 						</ul>
 					</div>
 				</section>
