--- a/Legal-Notice.html
+++ b/Legal-Notice.html
@@ -48,7 +48,7 @@
 								<ul role="navigation" class="nav">
 									<li><a title="Home" href="https://alptra.github.io/index.html">Home</a></li>
 									<li><a title="Portfolio" href="">Portfolio</a></li> 
-									<li><a title="Disclaimer" href="">Disclaimer</a></li>
+									<li><a title="Disclaimer" href="https://alptra.github.io/Legal-Notice.html">Disclaimer</a></li>
 									<li><a title="Cafe" href="https://alptra.github.io/right-sidebar.html">Cafe</a></li>
 								</ul>
 							</nav>
