--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
 										<div class="col-6 col-12-small">
 											<ul class="icons">
 												<li class="icon solid fa-home">
-													<br>267 Rue de la Piat<br />
-													<br>73260 Grand-Aigueblanche<br />
+													<br>267 Rue de la Piat
+													<br>73260 Grand-Aigueblanche
 													<br>France
 												</li>
 											</ul>
