--- a/index.html
+++ b/index.html
@@ -238,9 +238,9 @@
 										<div class="col-6 col-12-small">
 											<ul class="icons">
 												<li class="icon solid fa-home">
-													<br>267 Rue de la Piat
+													<p>267 Rue de la Piat
 													<br>73260 Grand-Aigueblanche
-													<br>France
+													<br>France</p>
 												</li>
 											</ul>
 										</div>
