--- a/Legal-Notice.html
+++ b/Legal-Notice.html
@@ -83,7 +83,7 @@
 											<br>France</p>
 											<h3></h3>
 											<p>SIRET Number: 75179823200029
-											<br>SOLE PROPRIETORSHIP - ENTREPRISE INDIVIDUELLE</p>
+											<br>Sole Proprietorship - Entreprise Individuelle</p>
 											<header>
 												<h2><FONT COLOR="#1d1d1f">Hosting provider</FONT></h2>
 											</header>
