--- a/Legal-Notice.html
+++ b/Legal-Notice.html
@@ -47,7 +47,7 @@
 							<nav id="nav">
 								<ul role="navigation" class="nav">
 									<li><a title="Home" href="https://alptra.github.io/index.html">Home</a></li>
-									<li><a title="Portfolio" href="">Portfolio</a></li> 
+									<li><a title="Projects" href="https://alptra.github.io/projects.html"">Projects</a></li>
 									<li><a title="Disclaimer" href="https://alptra.github.io/Legal-Notice.html">Disclaimer</a></li>
 									<li><a title="Cafe" href="https://alptra.github.io/right-sidebar.html">Cafe</a></li>
 								</ul>
