--- a/projects.html
+++ b/projects.html
@@ -70,9 +70,9 @@
 											<span class="image featured"><img src="images/.jpg" alt="" style="border-radius: 2%"/></span>
 											<h3>Documents</h3>
 											<p>Translation of a news article | Journalism</p>
-											<h3>Subtitles</h3>
-											<p>Subtitle Translation Human Sciences TV reports 150 min
-											<br>Subtitle Translation TV series 400 min
+											<h3>Subtitling</h3>
+											<p>Translation Human Sciences TV reports 150 min
+											<br>Translation TV series 400 min
 											<br>Quality Assurance TV reports 300 min
 											<br>Documentary 50 min
 											<br>Classic Anime series and shows 270 min
