--- a/projects.html
+++ b/projects.html
@@ -71,18 +71,19 @@
 											<h3>Documents</h3>
 											<p>Translation of a news article | Journalism</p>
 											<h3>Subtitling</h3>
-											<p>Translation Human Sciences TV reports 150 min
-											<br>Translation TV series 400 min
-											<br>Quality Assurance TV reports 300 min
-											<br>Documentary 50 min
-											<br>Classic Anime series and shows 270 min
+											<p>Translation TV reports 150 min | Human Sciences
+											<br>Translation TV series 400 min | Human Sciences
+											<br>Quality Assurance TV reports 300 min | Human Sciences
+											<br>Documentary 50 min | Human Sciences
+											<br>Classic Anime series 270 min | Animations
 											<br>Quality Assurance TV series 1220 min
-											<br>Quality Assurance TV series Human Sciences 200 min
+											<br>Quality Assurance TV series Human Sciences 200 min | Human Sciences
 											<br>Quality Assurance Film 90 min
 											<br>Captioning - Translation French dialogues to English
 											<br>Documentary 30 min
-											<br>Subtitling and Engineering 3 min- Corporate/HR
-											<br>Subtitling and Engineering 26 min- Corporate/HR
+											<br>Film 100 min
+											<br>Subtitling and Engineering 3 min | Corporate/HR
+											<br>Subtitling and Engineering 26 min | Corporate/HR
 											<h3>Voice Over</h3>
 											<p>Voice over on a sport app</p>
 											<h3>Transcription</h3>
