--- a/projects.html
+++ b/projects.html
@@ -69,6 +69,7 @@
 											</header>
 											<span class="image featured"><img src="images/.jpg" alt="" style="border-radius: 2%"/></span>
 											<h3>Documents</h3>
+											<p>Translation and review of manuals</p>
 											<p>Translation of a news article | Journalism</p>
 											<h3>Subtitling</h3>
 											<p>Translation TV reports 150 min | Human Sciences
@@ -76,18 +77,18 @@
 											<br>Quality Assurance TV reports 300 min | Human Sciences
 											<br>Documentary 50 min | Human Sciences
 											<br>Classic Anime series 270 min | Animations
-											<br>Quality Assurance TV series 1220 min
+											<br>Quality Assurance TV series 1220 min |
 											<br>Quality Assurance TV series Human Sciences 200 min | Human Sciences
-											<br>Quality Assurance Film 90 min
-											<br>Captioning - Translation French dialogues to English
-											<br>Documentary 30 min
-											<br>Film 100 min
+											<br>Quality Assurance Film 90 min |
+											<br>Captioning - Translation French dialogues into English
+											<br>Documentary 30 min | Human Sciences
+											<br>Film 100 min | 
 											<br>Subtitling and Engineering 3 min | Corporate/HR
 											<br>Subtitling and Engineering 26 min | Corporate/HR
 											<h3>Voice Over</h3>
-											<p>Voice over on a sport app</p>
+											<p>Voice over on a sport app |</p>
 											<h3>Transcription</h3>
-											<p>Social/New Technology</p>
+											<p>Video | Social/New Technology</p>
 										</article>
 
 			<!-- Footer -->
