--- a/projects.html
+++ b/projects.html
@@ -69,8 +69,8 @@
 											</header>
 											<span class="image featured"><img src="images/.jpg" alt="" style="border-radius: 2%"/></span>
 											<h3>Documents</h3>
-											<p>Translation and review of manuals</p>
-											<p>Translation of a news article | Journalism</p>
+											<p>Translation and review of manuals
+											<br>Translation of a news article | Journalism</p>
 											<h3>Subtitling</h3>
 											<p>Translation TV reports 150 min | Human Sciences
 											<br>Translation TV series 400 min | Human Sciences
