--- a/projects.html
+++ b/projects.html
@@ -61,12 +61,17 @@
 						<div class="row">
 
 							<!-- Content -->
-									
+									<!-- Features -->
+										<section id="features">
+											<div class="container">
+												<header>
+													<h2><strong><font color="#1d1d1f">Project History</font></strong></h2>
+												</header>
+											</div>
+										</section>
+										
 									<!-- Post -->
 										<article class="box post">
-											<header>
-												<h2><FONT COLOR="#0B8484"><strong><FONT COLOR="#0B8484">Project History</FONT></strong></FONT></h2>
-											</header>
 											<span class="image featured"><img src="images/.jpg" alt="" style="border-radius: 2%"/></span>
 											<h3>Documents</h3>
 											<p>Translation and review of manuals
