--- a/projects.html
+++ b/projects.html
@@ -77,15 +77,15 @@
 											<br>Documentary 50 min | Human Sciences
 											<br>Classic Anime series 270 min | Animations
 											<br>Quality Assurance TV series 1220 min |
-											<br>Quality Assurance TV series Human Sciences 200 min | Human Sciences
-											<br>Quality Assurance Film 90 min |
-											<br>Captioning - Translation French dialogues into English
+											<br>Quality Assurance TV series 200 min | Human Sciences
+											<br>Quality Assurance Film 90 min
+											<br>Captions - Translation French dialogues into English
 											<br>Documentary 30 min | Human Sciences
-											<br>Film 100 min | 
+											<br>Film 100 min
 											<br>Subtitling and Engineering 3 min | Corporate/HR
 											<br>Subtitling and Engineering 26 min | Corporate/HR
 											<h3>Voice Over</h3>
-											<p>Voice over on a sport app |</p>
+											<p>Voice over on a sport app | New Technology</p>
 											<h3>Transcription</h3>
 											<p>Video | Social/New Technology</p>
 										</article>
