--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,7 @@
 											<h3>Documents</h3>
 											<p>Translation and review of manuals
 											<br>Translation of a news article | Journalism</p>
-											<h3>Subtitling</h3>
+											<h3>Subtitling and Engineering</h3>
 											<p>Translation TV reports 150 min | Human Sciences
 											<br>Translation TV series 400 min | Human Sciences
 											<br>Quality Assurance TV reports 300 min | Human Sciences
@@ -82,8 +82,8 @@
 											<br>Captions - Translation French dialogues into English
 											<br>Documentary 30 min | Human Sciences
 											<br>Film 100 min
-											<br>Subtitling and Engineering 3 min | Corporate/HR
-											<br>Subtitling and Engineering 26 min | Corporate/HR
+											<br>Video 3 min | Corporate/HR
+											<br>Video 26 min | Corporate/HR
 											<h3>Voice Over</h3>
 											<p>Voice over on a sport app | New Technology</p>
 											<h3>Transcription</h3>
