--- a/projects.html
+++ b/projects.html
@@ -71,23 +71,23 @@
 											<p>Translation and review of manuals
 											<br>Translation of a news article | Journalism</p>
 											<h3>Subtitling and Engineering</h3>
-											<p>Translation TV reports 150 min | Human Sciences
-											<br>Translation TV series 400 min | Human Sciences
-											<br>Quality Assurance TV reports 300 min | Human Sciences
-											<br>Documentary 50 min | Human Sciences
-											<br>Classic Anime series 270 min | Animations
-											<br>Quality Assurance TV series 1220 min |
-											<br>Quality Assurance TV series 200 min | Human Sciences
-											<br>Quality Assurance Film 90 min
-											<br>Captions - Translation French dialogues into English
-											<br>Documentary 30 min | Human Sciences
-											<br>Film 100 min
-											<br>Video 3 min | Corporate/HR
-											<br>Video 26 min | Corporate/HR
+											<p>Translation 150 min | Human Sciences
+											<br>Translation 400 min | Human Sciences
+											<br>Quality Assurance 300 min | Human Sciences
+											<br>Translation 50 min | Documentary
+											<br>Quality Assurance Full Season 270 min | Classic Anime series
+											<br>Quality Assurance 1220 min | Shows
+											<br>Quality Assurance 200 min | Human Sciences
+											<br>Quality Assurance 90 min | Documentary
+											<br>Captions & Translation French dialogues into English
+											<br>Translation 30 min | Documentary
+											<br>Translation 100 min | Film
+											<br>Translation 3 min | Corporate/HR
+											<br>Translation 26 min | Corporate/HR
 											<h3>Voice Over</h3>
 											<p>Voice over on a sport app | New Technology</p>
 											<h3>Transcription</h3>
-											<p>Video | Social/New Technology</p>
+											<p>Canadian French | Social/New Technology</p>
 										</article>
 
 			<!-- Footer -->
