--- a/projects.html
+++ b/projects.html
@@ -83,7 +83,7 @@
 											<br>Translation 30 min | Documentary
 											<br>Translation 100 min | Film
 											<br>Translation 3 min | Corporate/HR
-											<br>Translation 26 min | Corporate/HR
+											<br>Translation 26 min | Corporate/HR</p>
 											<h3>Voice Over</h3>
 											<p>Voice over on a sport app | New Technology</p>
 											<h3>Transcription</h3>
