--- a/projects.html
+++ b/projects.html
@@ -79,7 +79,7 @@
 											<br>Quality Assurance Full season 1220 min | Shows
 											<br>Quality Assurance 200 min | Human Sciences
 											<br>Quality Assurance 90 min | Documentary
-											<br>Captions & Translation French dialogues into English
+											<br>Captions & Translation French dialogues into English | Shows
 											<br>Translation 30 min | Documentary
 											<br>Translation 100 min | Film
 											<br>Translation 3 min | Corporate/HR
