--- a/projects.html
+++ b/projects.html
@@ -89,6 +89,9 @@
 											<h3>Transcription</h3>
 											<p>Canadian French | Social/New Technology</p>
 										</article>
+						</div>
+					</div>
+				</section>
 
 			<!-- Footer -->
 				<section id="footer">
