--- a/projects.html
+++ b/projects.html
@@ -76,7 +76,7 @@
 											<br>Translation 400 min | Human Sciences
 											<br>Quality Assurance 300 min | Human Sciences
 											<br>Translation 50 min | Documentary
-											<br>Quality Assurance Full Season 270 min | Classic Anime series
+											<br>Quality Assurance Full Season 270 min | Classic Animation
 											<br>Quality Assurance Full season 1220 min | Shows
 											<br>Quality Assurance 200 min | Human Sciences
 											<br>Quality Assurance 90 min | Documentary
