--- a/Legal-Notice.html
+++ b/Legal-Notice.html
@@ -93,9 +93,9 @@
 											<header>
 												<h2><FONT COLOR="#1d1d1f">Intellectual Property</FONT></h2>
 											</header>
-											<p>Except for explicitly licensed elements, all information on this web site is protected by the copyrights held by Alptra.
+											<p>The photos are covered by the Unsplash license. Except for explicitly licensed elements, all information on this web site is protected by the copyrights held by Alptra.
 											Therefore, the information may not be reproduced, modified, republished, re-aired, translated, distributed or reused in any manner, without the written consent of Alptra.
-											Alptra’s title, concept and form, as well as its content, contained on the Alptra site are the property of Alptra. The photos are covered by the Unsplash license.</p>
+											Alptra’s title, concept and form, as well as its content, contained on the Alptra site are the property of Alptra.</p>
 										</article>
 									
 						</div>
