--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<li><a title="Projects" href="https://alptra.github.io/projects.html"">Projects</a></li>
 									<li><a title="Disclaimer" href="https://alptra.github.io/Legal-Notice.html">Disclaimer</a></li>
 									<li><a title="Cafe" href="https://alptra.github.io/right-sidebar.html">Cafe</a></li>
-									<li><a title="Contact" href="https://alptra.github.io/contact.html">Cafe</a></li>
+									<li><a title="Contact" href="https://alptra.github.io/contact.html">Contact</a></li>
 								</ul>
 							</nav>
 						
