--- a/contact.html
+++ b/contact.html
@@ -47,6 +47,15 @@
 							</p>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+						
+						<!-- Nav -->
+							<nav id="nav">
+								<ul role="navigation" class="nav">
+  									<li><a title="Home" href="https://alptra.github.io/index.html">Home</a></li>
+									<li><a title="Projects" href="https://alptra.github.io/projects.html"">Projects</a></li>
+									<li><a title="Disclaimer" href="https://alptra.github.io/Legal-Notice.html">Disclaimer</a></li>
+									<li><a title="Cafe" href="https://alptra.github.io/right-sidebar.html">Cafe</a></li>
+									<li><a title="Contact" href="https://alptra.github.io/contact.html">Contact</a></li>
             
 <!-- 
 Popup Contact Form based on:
