--- a/contact.html
+++ b/contact.html
@@ -131,6 +131,8 @@ https://codyhouse.co/gem/simple-confirmation-popup/
 						</ul>
 					</div>
 				</section>
+
+</div>										
 								
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
