--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 							</div>
 							<div class="col-12">
 								<ul class="actions">
-									<li><a href="https://alptra.github.io/right-sidebar.html" class="button">Tell Me More</a></li>
+									<li><a href="https://alptra.github.io/right-sidebar.html" class="bouton">Tell Me More</a></li>
 								</ul>
 							</div>
 						</div>
@@ -187,7 +187,7 @@
 											<h3>Every project is special.</h3>
 											</div>
 											<ul class="actions">
-												<li><a href="https://alptra.github.io/right-sidebar.html" class="button">Continue Reading</a></li>
+												<li><a href="https://alptra.github.io/right-sidebar.html" class="bouton">Continue Reading</a></li>
 											</ul>
 										</article>
 									<!-- Post -->
