--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@ https://codyhouse.co/gem/simple-confirmation-popup/
 <div class="contact-container">
   <h2>Feel free to get in touch.</h2>
   <ul class="actions">
-    <li><a href="#" id="contact" class="button big">Contact Us</a></li>
+    <li><a href="#" id="contact" class="bouton big">Contact Us</a></li>
   </ul>
 </div>
 
@@ -81,7 +81,7 @@ https://codyhouse.co/gem/simple-confirmation-popup/
   <form name="contactform" id="contactform" class="contact-form">
     <div class="cd-popup-container" style="">
       <p style="">
-        <a href="" class="cd-popup-close cd-close-button">
+        <a href="" class="cd-popup-close cd-close-bouton">
           <i class="fa fa-times" style="pointer-events:none;"></i>
         </a>
       </p>
@@ -114,7 +114,7 @@ https://codyhouse.co/gem/simple-confirmation-popup/
 
 <div class="cd-popup notification" role="alert">
   <div class="cd-popup-container">
-    <a href="" class="cd-popup-close cd-close-button"><i class="fa fa-times" style="pointer-events:none;"></i></a>
+    <a href="" class="cd-popup-close cd-close-bouton"><i class="fa fa-times" style="pointer-events:none;"></i></a>
     <p>
       <h3 id="notification-text">Thanks for getting in touch!</h3>
     </p>
