--- a/contact.html
+++ b/contact.html
@@ -124,6 +124,7 @@ https://codyhouse.co/gem/simple-confirmation-popup/
 	</section>
 
 			<!-- Footer -->
+				<section id="footer">
 					<div id="copyright" class="container">
 						<ul class="links">
 							<li>&copy; Alptra. All rights reserved.<a href="https://alptra.github.io/Legal-Notice.html"> Legal Notice</a></li>
