--- a/contact.html
+++ b/contact.html
@@ -130,6 +130,7 @@ https://codyhouse.co/gem/simple-confirmation-popup/
 							<li>&copy; Alptra. All rights reserved.<a href="https://alptra.github.io/Legal-Notice.html"> Legal Notice</a></li>
 						</ul>
 					</div>
+				</section>
 
 </div>										
 								
