--- a/contact.html
+++ b/contact.html
@@ -62,8 +62,8 @@
 					</div>
 				</section>							
 			
-			<!-- Main -->
-				<section id="main">
+			<!-- Features -->
+				<section id="Features">
 <!-- 
 Popup Contact Form based on:
 https://codepen.io/jhnwlsn/pen/vulgn by John Wilson
