--- a/contact.html
+++ b/contact.html
@@ -62,8 +62,8 @@
 					</div>
 				</section>							
 			
-			<!-- Features -->
-				<section id="Features">
+			<!-- Main -->
+				<section id="Main">
 <!-- 
 Popup Contact Form based on:
 https://codepen.io/jhnwlsn/pen/vulgn by John Wilson
