--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,10 @@
 				</section>							
 			
 			<!-- Main -->
-				<section id="Main">
+				<section id="main">
+<div class="container">
+						<div class="row">
+
 <!-- 
 Popup Contact Form based on:
 https://codepen.io/jhnwlsn/pen/vulgn by John Wilson
