--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,6 @@
 				<section id="main">
 <div class="container">
 						<div class="row">
-
 <!-- 
 Popup Contact Form based on:
 https://codepen.io/jhnwlsn/pen/vulgn by John Wilson
@@ -123,8 +122,10 @@ https://codyhouse.co/gem/simple-confirmation-popup/
     </p>
   </div>
 </div>
-										
-	</section>
+									
+</div>
+					</div>
+				</section>
 
 			<!-- Footer -->
 				<section id="footer">
