--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -118,6 +118,15 @@
 										</article>
 									
 						</div>
+						<div class="col-6 col-12-small">
+								<ul class="icons">
+									<li class="">
+										<a href="#"></a>
+										<script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>
+										<script type="IN/Share" data-url="HTTPS://www.linkedin.com/in/alptra"></script>
+									</li>
+								</ul>
+						</div>
 					</div>
 				</section>
 
