--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@ Popup Contact Form based on:
 https://codepen.io/jhnwlsn/pen/vulgn by John Wilson
 https://codyhouse.co/gem/simple-confirmation-popup/
 -->
-
+				<!-- Content -->
 				<div class="contact-container">
   					<h2>Feel free to get in touch.</h2>
   					<ul class="actions">
