--- a/contact.html
+++ b/contact.html
@@ -64,12 +64,23 @@
 			
 			<!-- Main -->
 				<section id="main">
+							<!-- Content -->
+									<!-- Post -->
+										<article class="box post">
+											<header>
+												<h2><FONT COLOR="#0B8484">Behold! This is <strong><FONT COLOR="#0B8484">Alptra</FONT></strong>!</FONT></h2>
+											</header>
+											<span class="image featured"><img src="images/pic14.jpg" alt="" style="border-radius: 2%"/></span>
+											<h3>Constraints are fun?</h3>
+											<p>The job of localization is to give a product the look and feel of having been created specifically for a target population, whatever their language, culture, or location. Translation is a piece of the overall localization workflow. For localized products, we translators work on very different types of content and different file types, such as image files, audio files, video files, software resource files, XML files, and HTML files. And we work for different clients with very different expectations. Audio obviously has to be recorded in each target language if it is supposed to be localized. The challenge here is how to translate the script for the audio. Text that is going to be read out loud needs to have a high degree of fluidity. Tongue-twisters have no place in a script for video voiceover. Super long sentences aren't a good fit for a localized podcast. Often, there is also the challenge of timing, since a lot of audio is actually used with video. The voiceover has to match the shown content. In the movie, a voice talent for the target language cannot speak longer than the person shown. Similar timing considerations apply for subtitles. In this case, it is the amount of time needed for reading the shown text that constrains how long it can be. French needs more words than the English language to convey the same meaning. So it's not easy, but it is definitely fun!</p>
+											<h3>A bit of history</h3>
+											<p>Considering mankind's ability to develop cars that can drive without human interaction and computers that win chess games against the best human players, one would think we'd be able to solve the problem of a universal communication for ourselves. Language is one of the most essential parts of our heritage and culture. Translation with the help of machines seems to be the most obvious and desirable way to achieve this. So we began asking computers to help us communicate. But even now, with computers that can perform an exaFLOP-- which is a billion, billion operations per second-- we haven't reached the goal of a universal communication solution. When talking about machine translation, the earliest example that is always mentioned is the attempt to translate Russian into English during the Cold War. In 1954, IBM and Georgetown University succeeded in machine translating more than 60 sentences with only 6 grammar rules and 250 lexical items in the computer's vocabulary. After some time, the first rules-based machine translation engine, or RbMT engine, was developed in the early 1970s.</p>
+										</article>										
 				<!-- 
 				Popup Contact Form based on:
 				https://codepen.io/jhnwlsn/pen/vulgn by John Wilson
 				https://codyhouse.co/gem/simple-confirmation-popup/
-				-->
-				<!-- Content -->
+				-->											
 				<div class="contact-container">
   					<h2>Feel free to get in touch.</h2>
   					<ul class="actions">
@@ -120,6 +131,7 @@
     							</p>
   						</div>
 					</div>
+				</section>
 
 			<!-- Footer -->
 				<section id="footer">
