--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,11 @@
 			
 			<!-- Main -->
 				<section id="main">
+					<div class="container">
+						<div class="row">
+										
 							<!-- Content -->
+										
 									<!-- Post -->
 										<article class="box post">
 											<span class="image featured"><img src="images/pic14.jpg" alt="" style="border-radius: 2%"/></span>
@@ -115,6 +119,8 @@
     							</div>
   						</form>
 					</div>
+					</div>
+					</div>			
 
 					<div class="cd-popup notification" role="alert">
   						<div class="cd-popup-container">
