--- a/contact.html
+++ b/contact.html
@@ -115,6 +115,7 @@
       								<div class="submit">
         								<p class="user-message" id="contactblurb"> Questions, suggestions, and general comments are all welcome!</p>
         								<input type="submit" name="submit" id="submit" value="Send" />
+									<a id="contact" href="">Send me an Email</a>
       								</div>
     							</div>
   						</form>
