--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
   						<form name="contactform" id="contactform" class="contact-form">
     							<div class="cd-popup-container" style="">
       								<p style="">
-        								<a href="" class="cd-popup-close cd-close-bouton">
+        								<a href="dG9ueUBhbHB0cmFuc2xhdGlvbmxhYi5jb20=" class="cd-popup-close cd-close-bouton">
           									<i class="fa fa-times" style="pointer-events:none;"></i>
         								</a>
       								</p>
