--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
 				<div class="contact-container">
   					<h2>Feel free to get in touch.</h2>
   					<ul class="actions">
-    						<li><a href="dG9ueUBhbHB0cmFuc2xhdGlvbmxhYi5jb20=" id="contact" class="bouton big">Contact Us</a></li>
+    						<li><a href="#" id="contact" class="bouton big">Contact Us</a></li>
  	 				</ul>
 				</div>
 
