--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
+<?php
+
+
+if($_POST["message"]) {
+
+
+mail("dG9ueUBhbHB0cmFuc2xhdGlvbmxhYi5jb20=", "Here is the subject line",
+
+
+$_POST["insert your message here"]. "From: an@email.address");
+
+
+}
+
+
+?>
+
 <!DOCTYPE HTML>
 <!--
 	Alptra website
@@ -57,7 +74,6 @@
 									<li><a title="Disclaimer" href="https://alptra.github.io/Legal-Notice.html">Disclaimer</a></li>
 									<li><a title="Cafe" href="https://alptra.github.io/right-sidebar.html">Cafe</a></li>
 									<li><a title="Contact" href="https://alptra.github.io/contact.html">Contact</a></li>
-									<li><a title="f" href="https://alptra.github.io/suscriberform.php.html">Contact</a></li>
 								</ul>
 							</nav>
 						
