--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 if($_POST["message"]) {
 
 
-mail("dG9ueUBhbHB0cmFuc2xhdGlvbmxhYi5jb20=", "Here is the subject line",
+mail("tonytranslator@yahoo.fr", "Here is the subject line",
 
 
 $_POST["insert your message here"]. "From: an@email.address");
