--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,8 @@
 				Popup Contact Form based on:
 				https://codepen.io/jhnwlsn/pen/vulgn by John Wilson
 				https://codyhouse.co/gem/simple-confirmation-popup/
-				-->											
+				-->
+				<form method="post" action="https://forms.un-static.com/forms/https://usebasin.com/f/2af93f30291d">
 				<div class="contact-container">
   					<h2>Feel free to get in touch.</h2>
   					<ul class="actions">
