--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,6 @@
 				https://codepen.io/jhnwlsn/pen/vulgn by John Wilson
 				https://codyhouse.co/gem/simple-confirmation-popup/
 				-->
-				<form method="post" action="https://forms.un-static.com/forms/https://usebasin.com/f/2af93f30291d">
 				<div class="contact-container">
   					<h2>Feel free to get in touch.</h2>
   					<ul class="actions">
@@ -87,7 +86,7 @@
 				</div>
 
 					<div class="cd-popup contact" role="alert">
-  						<form name="contactform" id="contactform" class="contact-form">
+						<form action="https://forms.un-static.com/forms/https://usebasin.com/f/2af93f30291d" method="POST">
     							<div class="cd-popup-container" style="">
       								<p style="">
         								<a href="" class="cd-popup-close cd-close-bouton">
