--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
 				</div>
 
 					<div class="cd-popup contact" role="alert">
-						<form name="contactform" id="contactform" class="contact-form" action="https://forms.un-static.com/forms/https://usebasin.com/f/2af93f30291d">
+						<form name="contactform" id="contactform" class="contact-form" action="https://forms.un-static.com/forms/https://usebasin.com/f/2af93f30291d" method="POST">
     							<div class="cd-popup-container" style="">
       								<p style="">
         								<a href="" class="cd-popup-close cd-close-bouton">
