--- a/contact.html
+++ b/contact.html
@@ -119,6 +119,7 @@
       								</div>
     							</div>
   						</form>
+						</form>
 					</div>		
 
 					<div class="cd-popup notification" role="alert">
