--- a/contact.html
+++ b/contact.html
@@ -87,6 +87,11 @@
 
 					<div class="cd-popup contact" role="alert">
 						<form name="contactform" id="contactform" class="contact-form">
+						<form action="https://usebasin.com/f/1a2b3c4d5e6f" method="POST">
+							<label for="email-address">Email Address</label>
+							<input type="email" id="email" name="email" required>
+							<button type="submit">Submit</button>
+						</form>
     							<div class="cd-popup-container" style="">
       								<p style="">
         								<a href="" class="cd-popup-close cd-close-bouton">
