--- a/contact.html
+++ b/contact.html
@@ -86,8 +86,8 @@
 				</div>
 
 					<div class="cd-popup contact" role="alert">
-						<form action="https://usebasin.com/f/2af93f30291d" method="POST">
-						<form name="contactform" id="contactform" class="contact-form">
+						<form action="https://usebasin.com/f/2af93f30291d" method="POST"
+						name="contactform" id="contactform" class="contact-form">
     							<div class="cd-popup-container" style="">
       								<p style="">
         								<a href="" class="cd-popup-close cd-close-bouton">
@@ -119,7 +119,6 @@
       								</div>
     							</div>
   						</form>
-						</form>
 					</div>		
 
 					<div class="cd-popup notification" role="alert">
