--- a/contact.html
+++ b/contact.html
@@ -86,15 +86,14 @@
 				</div>
 
 					<div class="cd-popup contact" role="alert">
-						<form action="https://usebasin.com/f/2af93f30291d" method="POST"
-						name="contactform" id="contactform" class="contact-form">
+						<form name="contactform" id="contactform" class="contact-form">
     							<div class="cd-popup-container" style="">
       								<p style="">
         								<a href="" class="cd-popup-close cd-close-bouton">
           									<i class="fa fa-times" style="pointer-events:none;"></i>
         								</a>
       								</p>
-										
+								<form action="https://usebasin.com/f/2af93f30291d" method="POST">		
       								<div class="name">
         							<label for="name">Name</label>
         								<input type="text" id="name" name="name" />
