--- a/contact.html
+++ b/contact.html
@@ -116,6 +116,7 @@
         								<p class="user-message" id="contactblurb"> Questions, suggestions, and general comments are all welcome!</p>
         								<input type="submit" name="submit" id="submit" value="Send" />
       								</div>
+  								</form>
     							</div>
   						</form>
 					</div>		
