--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
     						<li><a href="#" id="contact" class="bouton big">Contact Us</a></li>
  	 				</ul>
 				</div>
-
+					<form action="https://usebasin.com/f/2af93f30291d" method="POST">
 					<div class="cd-popup contact" role="alert">
 						<form name="contactform" id="contactform" class="contact-form">
     							<div class="cd-popup-container" style="">
@@ -93,7 +93,7 @@
           									<i class="fa fa-times" style="pointer-events:none;"></i>
         								</a>
       								</p>
-								<form action="https://usebasin.com/f/2af93f30291d" method="POST">		
+	
       								<div class="name">
         							<label for="name">Name</label>
         								<input type="text" id="name" name="name" />
@@ -129,6 +129,7 @@
     							</p>
   						</div>
 					</div>
+					</form>
 				</section>
 
 			<!-- Footer -->
