--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
 				https://codepen.io/jhnwlsn/pen/vulgn by John Wilson
 				https://codyhouse.co/gem/simple-confirmation-popup/
 				-->
-				<form action="https://usebasin.com/f/2af93f30291d" method="POST"
+				<form action="https://usebasin.com/f/2af93f30291d" method="POST">
 				<div class="contact-container">
   					<h2>Feel free to get in touch.</h2>
   					<ul class="actions">
