--- a/Legal-Notice.html
+++ b/Legal-Notice.html
@@ -97,6 +97,9 @@
 											<p>The photos are covered by the Unsplash license. Except for explicitly licensed elements, all information on this web site is protected by the copyrights held by Alptra.
 											Therefore, the information may not be reproduced, modified, republished, re-aired, translated, distributed or reused in any manner, without the written consent of Alptra.
 											Alptra’s title, concept and form, as well as its content, contained on the Alptra site are the property of Alptra.</p>
+												<h2><FONT COLOR="#1d1d1f">Privacy Policy</FONT></h2>
+											</header>
+											<p>Alptra cares about your privacy and the security of your information. When you submit information to this website using contact form, we collect the data requested to communicate with you in order to track and respond to your submissions.</p>
 										</article>
 									
 						</div>
