--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 										<header>
 											<h3>Translation</h3>
 										</header>
-										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="words" style="border-radius: 2%"/></a>
+										<span class="image featured"><img src="images/pic02.jpg" alt="words" style="border-radius: 2%"/></span>
 										<p>I offer translation services from English into French, in the fields of French law, literature, industry, and entertainment. All documents will remain strictly confidential.</p>
 		    								</div>
 									</section>
@@ -108,7 +108,7 @@
 										<header>
 											<h3>Proofreading</h3>
 										</header>
-										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="glasses" height= "239.7" style="border-radius: 2%"/></a>
+										<span class="image featured"><img src="images/pic03.jpg" alt="glasses" height= "239.7" style="border-radius: 2%"/></span>
 										<p>Proofreading services include reading and reviewing your documents for spelling, grammar, accuracy and clarity. They should be checked and rechecked.</p>
 		    								</div>
 									</section>
@@ -158,7 +158,7 @@
 												</a></h2>
 												<h3><a href="#">Audiovisual translation</a></h3>
 											</header>
-											<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" style="border-radius: 2%"/></a>
+											<span class="image featured"><img src="images/pic04.jpg" alt="" style="border-radius: 2%"/></a></span>
 											<p><strong>My inspiration</strong>
 											<p>As far as I can remember, when watching TV or a movie with my sister, we would always turn on the subtitles because of her hearing issue. Subtitles became important to me, I love translating them and making sure they are perfect.
 											It has helped me to understand my purpose and I can work where I’m at my most creative and productive, while preserving precision and attention to detail. My job is to create magic and awaken emotions!</p>
@@ -171,7 +171,7 @@
 											<header>
 												<h3><a href="#">Voice over & Transcription</a></h3>
 											</header>
-											<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" style="border-radius: 2%"/></a>
+											<span class="image featured"><img src="images/pic06.jpg" alt="" style="border-radius: 2%"/></span>
 											<p>Record your production in French. We help make your project sound great.
 											<br>Get your audio and video files in French transcribed, whether it's a podcast, lecture, or meeting.</p>
 											</div>
@@ -196,7 +196,7 @@
 											<header>
 												<h2><a href="#">We are located in the French Alps, between France, Italy and Switzerland.</a></h2>
 											</header>
-											<a href="#" class="image featured"><img src="images/pic05.jpg" alt="alps" style="border-radius: 2%"/></a>
+											<span class="image featured"><img src="images/pic05.jpg" alt="alps" style="border-radius: 2%"/></span>
 											<h3>Our clients include individuals, businesses, broadcasting & media production companies.</h3>
 											<p></p>
 											</div>
