--- a/Legal-Notice.html
+++ b/Legal-Notice.html
@@ -1,4 +1,10 @@
 <!DOCTYPE HTML>
+<!--
+	Alptra website
+
+	(html5up.net | Strongly Typed by HTML5 UP. CCA 3.0 license (html5up.net/license). @ajlkn | aj@lkn.io | AJ.)
+	Changes were made.
+-->
 <html>
 	<head>
 		<SCRIPT LANGUAGE="JavaScript"> 
