--- a/projects.html
+++ b/projects.html
@@ -72,7 +72,7 @@
 									<!-- Post -->
 										<article class="box post">
 											<header>
-												<h2><FONT COLOR="#0B8484"><strong><FONT COLOR="#0B8484">Project History</FONT></strong></FONT></h2>
+												<h2><strong><FONT COLOR="#008248">Project History</FONT></strong></h2>
 											</header>
 											<span class="image featured"><img src="images/.jpg" alt="" style="border-radius: 2%"/></span>
 											<h3>Documents</h3>
