--- a/projects.html
+++ b/projects.html
@@ -71,10 +71,10 @@
 										
 									<!-- Post -->
 										<article class="box post">
+											<span class="image featured"><img src="images/pic15.jpg" alt="" style="border-radius: 2%"/></span>
 											<header>
 												<h2><strong><FONT COLOR="#008248">Project History</FONT></strong></h2>
 											</header>
-											<span class="image featured"><img src="images/.jpg" alt="" style="border-radius: 2%"/></span>
 											<h3>Documents</h3>
 											<p>Translation and review of manuals
 											<br>Translation of a news article | Journalism</p>
