--- a/projects.html
+++ b/projects.html
@@ -71,7 +71,7 @@
 										
 									<!-- Post -->
 										<article class="box post">
-											<span class="image featured"><img src="images/.jpg" alt="" style="border-radius: 2%"/></span>
+											<span class="image featured"><img src="images/pic15.jpg" alt="" style="border-radius: 2%"/></span>
 											<header>
 												<h2><strong><FONT COLOR="#008248">Project History</FONT></strong></h2>
 											</header>
