--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<input class="checkbox-cb" id="checkbox-cb" type="checkbox" />
 			<div class="cookie-bar">
   				<span class="message">We use cookies to give you the best experience of our website. By browsing you agree to our use of cookies. <a href="https://alptra.github.io/Legal-Notice.html">I understand!</a></span>
-  				<span class="mobile">This website uses cookies, <a href="#">learn more</a></span>
+  				<span class="mobile">This website uses cookies, <a href="https://alptra.github.io/Legal-Notice.html">learn more</a></span>
   				<label for="checkbox-cb" class="close-cb">x</label>
 			</div>
 			
