--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
 						
 					</div>
 				</section>
+										
+				<div class="bakedCookies">
+    					<div class="cookieDough"><button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>We use cookies to give you the best experience of our website. By browsing you agree to our use of cookies. <a href="/content/use-cookies" target="_blank" >here...</a></div>
+  				</div>
+				<div class="container">
+   
+
+  
+  
+				<iframe src="https://cws-live.pulsant.microserveltd.co.uk/" width="1600" frameborder="0" height="2500" ></iframe>
+				</div>
 			
 			<!-- Features -->
 				<section id="features">
