--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				<div class="bakedCookies">
     					<div class="cookieDough"><button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>We use cookies to give you the best experience of our website. By browsing you agree to our use of cookies. <a href="/content/use-cookies" target="_blank" >here...</a></div>
   				</div>
-				<div class="container">
+				<div class="contenant">
    
 
   
