--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 	Changes were made.
 -->
 <html>
+	<div class="cookie-disclaimer">
+		<div class="container d-md-flex justify-content-md-between align-items-md-center">
+	    	<p class="mt-0 mb-md-0">Diese Webseite verwendet Cookies und Analyse Tools zur technischen Unterstützung. Weitere Infos: <a href="/datenschutz" title="Datenschutzerklärung">Datenschutzerklärung</a></p>
+	    	<button type="button" class="btn btn-sm btn-small ml-md-2 accept-cookie">Akzeptieren</button>
+		</div>
+	</div>
 	<head>
 		<SCRIPT LANGUAGE="JavaScript"> 
 		<!-- Disable 
