--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<section id="header">
 					<div class="container">						
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">Alptra</a></h1>
+							<h1 id="logo">Alptra</h1>
 							<p class="ml6">
   								<span class="text-wrapper">
 									<span class="letters">Translating more than words</span>
