--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 										<article class="box post">
 											<div class="js-show-on-scroll">
 											<header>
-												<h2><a href="https://alptra.github.io/contact.html">We are located in the French Alps, between France, Italy and Switzerland.</a></h2>
+												<h2>We are located in the French Alps, between France, Italy and Switzerland.</h2>
 											</header>
 											<span class="image featured"><img src="images/pic05.jpg" alt="alps" style="border-radius: 2%"/></span>
 											<h3>Our clients include individuals, businesses, broadcasting & media production companies.</h3>
