--- a/index.html
+++ b/index.html
@@ -6,12 +6,6 @@
 	Changes were made.
 -->
 <html>
-	<input class="checkbox-cb" id="checkbox-cb" type="checkbox" />
-	<div class="cookie-bar">
-  		<span class="message">This website uses cookies to give you an incredible experience. By using this website you agree to the <a href="#">terms</a></span>
-  		<span class="mobile">This website uses cookies, <a href="#">learn more</a></span>
-  		<label for="checkbox-cb" class="close-cb">x</label>
-	</div>
 	<head>
 		<SCRIPT LANGUAGE="JavaScript"> 
 		<!-- Disable 
@@ -44,7 +38,14 @@
 			
 			<!-- Header -->
 				<section id="header">
-					<div class="container">						
+					<div class="container">
+						<!-- Cookie bar-->
+							<input class="checkbox-cb" id="checkbox-cb" type="checkbox" />
+							<div class="cookie-bar">
+  								<span class="message">This website uses cookies to give you an incredible experience. By using this website you agree to the <a href="#">terms</a></span>
+  								<span class="mobile">This website uses cookies, <a href="#">learn more</a></span>
+  								<label for="checkbox-cb" class="close-cb">x</label>
+							</div>						
 						<!-- Logo -->
 							<h1 id="logo">Alptra</h1>
 							<p class="ml6">
