--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<h1 id="logo">Alptra</h1>
 							<p class="ml6">
   								<span class="text-wrapper">
-									<span class="letters">Translating more than Words</span>
+									<span class="letters">translating more than words</span>
   								</span>
 							</p>
 
